--- a/TiendaNaturista/Menu.resx
+++ b/TiendaNaturista/Menu.resx
@@ -120,27 +120,49 @@
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="button1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
         JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA3WAAAN1gGQb3mcAAAAAWJL
-        R0QAiAUdSAAAAAd0SU1FB+ILBhY3O/xE6DYAAAAldEVYdGRhdGU6Y3JlYXRlADIwMTgtMTEtMDZUMjI6
-        NTU6NTkrMDE6MDBRppEHAAAAJXRFWHRkYXRlOm1vZGlmeQAyMDE4LTExLTA2VDIyOjU1OjU5KzAxOjAw
-        IPspuwAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAJESURBVEhLrVXPb01BFD4h
-        lQglLCwFq0YkrKxJo5FYkCCxaxEvfswMr2kQEdoVO5uK2ojYai0kLFgUkZCqFTZiZyPEm3PbP+D5vjN6
-        X+t57q37vuTkfTk/vjkzc95ckTI4Pb9Jgt4THz+ZkdPXFVz80Ste30O0JiPf1piR08dYZfjsKgRvtOnQ
-        x1hleH0qdd3WpkMfY5Xhsvvo9ICExg5xetmMnD7GKiNk+/NOvQ6AD5gmu2esK3DZdQh+QNcuGTh9XYWP
-        O3HZI2bkXYXTrRLiIMRvJwOnrzJqzR50OwaxJ/gdkgtxlxl58o0Jc/4LR5srcdbPrdtOYIw5zF02vF7B
-        hYbCOuYwd1k4oxtwBC9L1zCXNaURtB/dXyudz1zWlEaIw9j2lLh4SPz8dvCbBTaFuxourS/1bCPE92Bi
-        toj/uc54kbGmEHyK/wWOZNFYdtQYba7AuX/EURzpuIaP45j98c5x1FKDWm3gnyfoHSzw5q9d2nHptBn5
-        n7A/JWpNA1o5gk5iJN/apfK8fTwB/gL2Ts7pPnueyYM+Q3e7zYzDxxhzyK0GtbXG+jQg0KQ2ntxjKHqM
-        ba3KF03P8rSc/b729xTNyvnG5jxO7nXWYpZjO0vPOEEtalLbwDF0enjRAjO2mwWkb8LEovjEkm+B7Vxn
-        8ji1qNkqyG5hDOtwPoRdwlZfS/3r6tYC8SAauJu/psbhWwBzWcNap4+SFjRbK/KzGB+Im+tD8DgSvyx5
-        jp2eRMEriO41I/d6Kq9PA/DZaqlBLRrwC9FNjH+WAJvbAAAAAElFTkSuQmCC
+        R0QAiAUdSAAAAAd0SU1FB+ILBhcwCA0XddAAAAAldEVYdGRhdGU6Y3JlYXRlADIwMTgtMTEtMDZUMjM6
+        NDg6MDgrMDE6MDBW1xkiAAAAJXRFWHRkYXRlOm1vZGlmeQAyMDE4LTExLTA2VDIzOjQ4OjA4KzAxOjAw
+        J4qhngAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAdbSURBVHhe7VtZiB1FFC1X
+        3HAD8TduEdyXIOKCW0RQyYcmoqIYFwaS6epkcD4UA47gh2AQlEjACW6QEKLEDz/Nx0QwEIgwIYyEBIXE
+        GM1ApqtnQrZJ5nnPvdXrvH79ut+b96ZncqGg6a46de7t6nq37r1PqU7KQO1C1Tv+vHL8D5Xr/ay0d5gb
+        rl1vgJ+hz5wUPXGb0mYXtVpOoz7Ud87IQO185Zp+UvqkVfygcv3PqL2s+syN3HCNe9octH1O8hiMrbxo
+        f034xl2zQemjV2bqhGfcJ1glNLbSor27SZnT1KboW3+haV3Ql8dgLGFUUnpqF5ECw/I2vc8L64AxshKG
+        FbAqJ/iuRYF9qufwZYX5YwzGAgNYlRNt1gp580Fp7hgrRlxbGqNrA7UZYvKO/0xpDhgrBhgqjdGdgbXz
+        iLQv5CeuK80BY8UAvlKEWRlZVruASB/nnbxn7KrSvDFWfg2OK2BWSrTZIXuA90SCt/buVY7Xp1aYa8L7
+        uMY9PIsLxsoK2FEp3Zms9tbZTbA/aQCzySp1jH8e5eeOrlnRTUkDsAeJn9F11TOA471pldqVWL6rxm+l
+        +7vts/i5YLfCs0DkM5KzA7AqJ3BrA9/eNe8n+C+vXUKfxhv0/CtuuMa9xPKnMbIq6HzQwH2e1YbpNU9b
+        JU6pXnNf01zRV5tTPBYYlRbXrLdGOJF7wotOjifs/rG+0rozebi0iRMe7eiu6VGrvXs4+IGGa9wLfjnE
+        g9xQyoWetRbT/nMSAUoEROAroMU2Q/ShvnNS+vxrbXBkMym93zo5cHRwvZmfoc+8EXh6rXiK88ZQc0ZR
+        xP+0WaEc8yl7fdr/VRpdy70VHCOcU7Lq2PWk3Mek3J463l9WhHgPj8HYykr/f5dz/F+biZjiuP6J3voa
+        2vDe4TwAGq4leErPUv2BAaxKifYfJIX+iSm+jQMjA7WLc/VAHwmEbIvGA4swKyGO/xoRD3IAw7SUnyzN
+        G2PDwCphAntWi/bejb31wWkHnDLkcUjSZjDCpTlmpTjeEiJ5Vnx4v7ftHIEpHuNZOh4vaTt+S4DO2J3h
+        5oUk50wJsMUIEwpzzhrRZqcllozozARB9h/YCDtnAr44pmOWWUJeSxHgZmeWSDHNhUgRzd1VwVFWDjL0
+        RnynY1wwl6yC/d2tJ9BmsSUy2tH8neQdR+3ciztm+GkTueZLIVEi+dkq6yB5Cg7dEcrUOOaQ/RYXdZyD
+        YxbZuQ91J2u02ltgl+DprnyHsv+g9qBGIbUFHX8Byh1/yC7/kc5PbmfU3og4XsSl4+KYF+0KoCIIbzk3
+        x381EdJyzVMc85+pFpwTwKXj4pi3Y35/dK4PNiXXv6Xu8/wqsbwqsunPwaXjguCl5P8Q4LTN/y5MgEhq
+        65Pk83jfdl0Th3kVSO34mz434TkLkAVQnjITJSpVwOWIjPcbt3QKu5XFURlcLl2xuTtct0sqgbty9IrY
+        qQu/v6MK91qVyuBGhc4oVfndnvtbL2BO4toS+jYURke44NoiLiq3tDFy4qI4ves/az8Fk6jwKroa0rhR
+        MWT7cMG1FC6SEu7YHZSpeYmOulutwkOhjrwZcihqK/fpPXp7U4EQBDDQNxM3qCptBy5xDCSsVrW40G1a
+        cgY1OK75kZT6g5SbTPnvU4mTltTtIZ8f98dR0j5CGFsoXP14ODmSGrgnJzY5tkYthcsnywa4seQK5miI
+        G6tLlBNrGnfS6vqD1B9pszdJjlNav3CUJ13kCO0wyPG+oD5IXf2bUmw4tlrkqBo2rg6hFBmPnR7Gwr0Q
+        N11JQkaM3qotwQ+xwUFw6xVU8UvjWkTSKZGuA7e9KGiko2xopeJV2UFBJCdF/FeiFUBH4yBRUqbaO6g2
+        50QIYYUGoDlC3BIFlBEu/sSxXGClQEmWimPea3pfixIVZ/nMnxYpliyOCw6ycqbqFklKjaHNQhVIxMRx
+        oXNCHH9lbLnm59+iWn5Y8q1Mo8WNi9xhnkT5Rdon0iRjgzFnYNxm/pMQz1tC17ri+jo0gmvuz+TqjD8c
+        vqFGJKNlG8TxUf6WjYtn4Z7RRJ4hsXKJU5bEcaFjQwnSXChcyBJtltrPZXveC41tXpI+a4SLZ0XTXo7Z
+        bscszeRSCFebI5bowkzAVWN32UkPFDBAPm7v+EKLe6QA7gEeA05Z0jSu/EEBm89k6OAA2DVf071BdmYg
+        fX9far+/Kb7Ok2zcjYS9MSQvGR/xRVZ7V+fB1uUBjtr7vhyu9h+wBtjH5aviDcYdCWxMW9hbDCrBG1k+
+        2gPycTEX5gz+KQYueRKtRPo3Knuw5Hil+BbClfIWrACUuASK0xvxv6Hf4m/p3plw8wuquZvJ0DbCBXbk
+        gWJOKa9x/dfz9Kd+shcJl4gvcy2Dq72Pol2YlqIs/ZtCIiv9m1OGwK6e/C9APdaRvyCfVxoXc8i9mCtO
+        XPIEc0fe5hnmBo7hyiuKK9nev7hS2zE3ZM4fGcKj7/eRPJ58RnDMn7m4mFMqyyn/7z2Wi6vHHmXctOLp
+        gXFcJGti8j98Q+9vw7nEJwAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="button2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA3WAAAN1gGQb3mcAAAAAWJL
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA3VAAAN1QE91ljxAAAAAWJL
         R0QAiAUdSAAAAAd0SU1FB+ILBhciM8To7CcAAAAldEVYdGRhdGU6Y3JlYXRlADIwMTgtMTEtMDZUMjM6
         MzQ6NTErMDE6MDC4qKeYAAAAJXRFWHRkYXRlOm1vZGlmeQAyMDE4LTExLTA2VDIzOjM0OjUxKzAxOjAw
         yfUfJAAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAVeSURBVHhe7VtrqFVFFJ7M
@@ -167,6 +189,74 @@
         nHNypgnDYArvgB+Ya9wibbcoqce1JsQKYVFkzgB8XJHyzUw+APOQCr+NnOybnBpHphdRCJh+mrYIX3pB
         2Wm06XIYezmq9vwNWKnxmeh3xMtYaY0XwmLtgAR7JQb8zt4AP7oCKATFvorxCfjJq+Xt4RCy5774QkHE
         C8EG/1pvgm9ogq68HGoS5nb0NvjWQhj4f4A3hTAQpKfwfV8X2/x//PX/YRQzOFQAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="button3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA3WAAAN1gGQb3mcAAAAAWJL
+        R0QAiAUdSAAAAAd0SU1FB+ILBhcvBb78B/MAAAAldEVYdGRhdGU6Y3JlYXRlADIwMTgtMTEtMDZUMjM6
+        NDc6MDUrMDE6MDDGCyNvAAAAJXRFWHRkYXRlOm1vZGlmeQAyMDE4LTExLTA2VDIzOjQ3OjA1KzAxOjAw
+        t1ab0wAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAi7SURBVHhe7RtnjFZF8ImK
+        NbbYNSr2aCyxEjVq7NGIDaKJDdsF7t6+706J3QQLlh9G7EQDGtGLMUYRSyQWFAgoSERFgwYV6fV23seB
+        gODnzO6++u0r33vv++7zcpts7u7t7O7M7MzszOycYTit1HW8weBtw4Tf8Welift6xG26YdoPGayynYt/
+        rl9MuxUX3dTEREcciD3XaF+3Xy7aDXnyDvGTUQKGGCX7dMOCcfiduF3B358y2vluTdFb7cMRnycQr5UC
+        NxM+zscAEnsp8pOrFjJ5SY2VjY5FO+TbqODZdEiuqtoDs6/u6DydfLjRqTNYp6TgZHeYwSj8tqCH+mAf
+        HrMlbjbLzgCHi8Nhd+0iJnwtN+FX+DYe03P2gg918SDVFPjbz+RnAJ22rjH4Suoav7KaAfxZtAsnNqST
+        igpifQxg8KSSgNE9wwAT7s2+cY0zmT2hjwF9EtCnAn02oH5GkEEn+tevV3UGyyNvgV5lBJMCIN012DsY
+        wNtRrGI6zO/dEpB0Hcc6QsJJImekEf23SD+AwSsYFJ2CHuH12B8UP9vKRxpGZask8pLH4xnQA3kDvyfI
+        n09wyQHHv0DmXJNMaBSEjgEUOFn26B7pzD5NRKYmfw6J+9fHgA34+0zsY7F/hn1NiDmdRoe9R+2M8DOA
+        FmD2ZcbISv/aFypoRqnrIDzRXzzi+JsiFmmpbFsdzsMAhL0bYf9W6rMUb7mLa8PEYQCDGbiITJAwWIFJ
+        iZbaFioAunXlzrj3jwoHTIjwqwOrUrKEgiUTzgt8N8tH47dv1Lz1Rql8VHpsPAYQ4SRy07Fvwc6NlqU7
+        pl8oLyQaNIt/qIhYaJS696lakYiX4fGEqrEhla1xrFPNn2HQ36lagAH8JjHHhPeUSMm/G9Es+1KFPB3C
+        BdotGb9VMWCidlwmeBYJGFKNxNax+gAEXqWIfcGFZ/YU9S0ogokL5gBg8LnY04IXtauYfBCOr/YxaZT2
+        lBlcpGA2aKXIXZyMihR3Ev0ZruFzuYz2YMTynaqQGbZ2b7TQ51Z1st7+NrLSTwtHc8OqxdYeo/BA1Vuz
+        S9WeLV274riT2CV/4R8F76XP/JNcZvqyXBp9cu7YFbjpgWLcso/AhbvV6bdrT8Kyr1Obh32EeQH4oZXt
+        I+BQPNFo+ZvFb1aiPVd/+ngt+xO7BC+MHjpFumbC40oNHtPLpPCoxMlvdi2qlIhZ6vukSC+LrhkGczT9
+        /ZAE9I+Am4PX2iEBWJmEJeP2mvhOB0JXH0mbdzBkG5YJqQo38hsIniRJzIfBHh1hYLPrOByUmWAG97jD
+        MhdP31blf4zQ8z3yqwXviL0tu00RIJOy/mCMwSRPovjPgWtaEC9wXyDmd8Ch6u/VwT3JwWEgfW6y9E4j
+        rsqrj5Kjg2LRJ7tAJxjuZFADDa81HRx9Czs1dPLSAD6gGOCk5Ye7S9K+DO5AvL93GdG25lgJL2wIpvH5
+        NPE3+QGSIcuCOHkG7teAsWGAf4sJYxLPri42AO5TKjBBuz8ZzdbufQ0yhtQcHWfcu7n8E8mblSo1xfcZ
+        T8RxMS37EneA8RMU8JJUjg95ZwwoCAn3mQHk6WFTDwfC2PobBTMS4SVaBjB+jjqg+YZUYeXw2E/r4eF+
+        BT/WG5d3Pp1yd8DAMf6w2jzH40Oi3MQDiBhE2SV6yww36eX96dkAQcdGow1OqoKVxtxxhq71xs3ymXIB
+        NCABccFwUn5vnNOjY4cFLysCZ6FPsk0VyF3lPXFcOkuk22G/w5lg8lsEDD0JBtxh075BTf4kxIDqlyEd
+        giYMC51AAbkC36Mn+QaOIXaMYRiPuFjAgRWMwgiSSgKCekYFB4J7LzUlAwgpi9+pcNyolcg4BggnDo2f
+        28LZIplICN79BKxLiOgkgK7QomsIdBEbg1c9SeNviD2d5uAQcNGRUGZbyoZsjlZlBl+KhekaC9qAdCqQ
+        086lni6MGL4GO9kgExajZIw0WNflhrlqf7EOMUDYNNsUV52X8Y7JCjH4Q1n7YLFBnARQeYqo1YHZiMR4
+        o40fnJqQvIAWnI+GbLHG7lAqTDptXl+ZnBdk0KWs44AAbha8q77fFrQZIvxEXQxshI8oa/fKS1vq+c7z
+        uLD68JcrFRTDMKwfYqgilPJ3YobYhaVTUqkOROjNQBDZ6c6XsbckXvjpwrNSqaqICCw1VTUAhusDKMIk
+        Y5epnCeKAeRPSwZswoIqTEgGiB+Hd3I/gbIXsem9rxroSg1aSIGEs1sUAwRx/CNlH6b6Tt4jXrqfKhuj
+        Qk4dFeSvS5uSvQfc9CIqRFIxQEVjjr5TCZ1z8pJ4WbJGScu4RpFe0GZkcJaKLpFJxQD41EU8inhmTzUo
+        bR3XKGqjR9Y8ndTQw7mAGqFUDMBoi/wDi1+lPfk0xKdW7BoAG2YDwjj5xb4W4skP19Ug0LdwItTij2hh
+        S11nNV4C/AzISjytEWcDwmV6Mq+osRH1swEy/x/3bJSHeHGbYEo7shYhVPktErO6ugXfLVOwCjhvbvpX
+        l7zE16DaqUGLZYD9gfLsbtci4D2HTQtYe4YxO2Vne6K7z3aY7IzdH5MgiY1h2avM/DyqhdVVahIgbZz7
+        btfpeqHf5iTSL/VNODPjszEAU2mUNW6qbk9Uh5OCAVQNXp0q9niRLAHJKfPkYygWQr5n0E2SggHyP0cI
+        eGE2CUjxZlAsecmrpWKA45Za9o2KAVuExxd2Vxl8K8apNofGGBwmMBBVWSIs1j9bJ6NZP4g2uFDRNDt6
+        k8wGDG2GYIBKm1swon6UZFyZErzycN5KwQC8StKFqbJ0loymVT4Df8fsCzlQ9qkZ0azPNPoPGAZlyQD1
+        qKrXbXXdRP3HSHgS+e3yYYGKjpyihO9QFQY2RS/xs/Fw6EqXGS4GP8RXtTkqUCsDMqtOofd7Uj7hJ1kx
+        GteyMwArR2Be83VMhopELvk1af6zNDMDlBGsjwY3cNU+BiidpEeNNE9b7tt7b5OAmo1aHwOkI/Q/b/8B
+        QENRFfVU6x8AAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="button4.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA3WAAAN1gGQb3mcAAAAAWJL
+        R0QAiAUdSAAAAAd0SU1FB+ILBhcuGirvO0cAAAAldEVYdGRhdGU6Y3JlYXRlADIwMTgtMTEtMDZUMjM6
+        NDY6MjYrMDE6MDBaBFWxAAAAJXRFWHRkYXRlOm1vZGlmeQAyMDE4LTExLTA2VDIzOjQ2OjI2KzAxOjAw
+        K1ntDQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAKfSURBVHhe7Ru7TsNALAMD
+        n8AGn8AHMCRpm1T9AiY+o2LkEzoyMjAwMPEDMHas1KQsFawd+wdgV03ic9W44Y6SHK500km+8/kcv30N
+        AvLrz4dhnCVf5ZgndxTexXkMd6B3wjvuvYcyQCWgXgXCfHCJUuJihJ/haSGKOHeBE3EgjVTEnapAnCdv
+        ho2g9qLhPHwfXpQMgLkrvEijMoBwQCXApRfYUQFEvh3RPLlnYjwtYNuvMKNwQQVmbO+U7t2cRc42zj2m
+        ClBdQ+NjEpJOKDzKkodDGYBrDT3O04mxlxs6an+UAUc0gioBhAOqAvnojBqmXp4OXdkAxEVxh3CWYSPa
+        YAOkRMnGCEq4W+EFJCKVARZuUGKuSoDaAFLEaRoIYUhajF6WXPNojsIBZoSkFCbNAfezUZnJ+1fFnj7M
+        KQzXSvgYXVUVC2g0YCyKxDtSeOAsDW2YDrflXGVAW77EX9HBJWCF/trnAYxeUWabDGAWVPK/XYTzmoYy
+        oC6K6uIXlmiulwDQD5/1f5uP1NiAjvpyGw+icYAN93zYGzTJBZrE521ZG0u5gLbH9X1AxQHpfQAWI52J
+        9mt4UjZHYe4MLy+Y/mprzMJtandY2+MevA+gYTPEBC8sLlgw+PLQ5iisW7K9C4b7hcGrkljTmmATN7iT
+        SGhrrOKA9gb1fcA/fyARL0bnUZ48lSNLb1x1hyPARXHjWdodpi/BtDVm0Rpz5QalWpy2x7U9/vNncpJ0
+        6fsAGyPoQ13P5g5aFbbhng97eW9wvcn4/B5r7Q4To6ndYe0OE3GAjOsD9P/W57G5414VsChzd9UjaBzQ
+        1S/niu4A3+KXIxuMKWL4c9KjAadrOzLHO5ivUAdjeicj0ZJ6g1JW1ka40/8NtvGCEk3KAKE7/A1UZVua
+        k9LS+gAAAABJRU5ErkJggg==
 </value>
   </data>
 </root>
